--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,5 @@
 version: "3"
 services:
-  node_backend:
-    container_name: "backend"
-    build: ./Back_End
-    ports:
-      - "8080:8080"
-
-  react_fronend:
-    container_name: "frontend"
-    build: ./Front_End
-    ports:
-      - "3000:3000"          
   pg:
    image: "postgres:12"
    container_name: "postgres"
@@ -19,4 +8,16 @@ services:
    volumes:
      - ./postgresDB/db_data:/var/lib/postgresql/data   
    environment:
-       POSTGRES_PASSWORD: "972500"       
+       POSTGRES_PASSWORD: "972500" 
+  node_backend:
+    container_name: "backend"
+    build: ./Back_End
+    ports:
+      - "8080:8080"
+    depends_on:
+      - pg
+  react_fronend:
+    container_name: "frontend"
+    build: ./Front_End
+    ports:
+      - "3000:3000"                
