--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,14 +8,15 @@ services:
    volumes:
      - ./postgresDB/db_data:/var/lib/postgresql/data   
    environment:
-       POSTGRES_PASSWORD: "972500" 
+     POSTGRES_PASSWORD: "972500"
   node_backend:
     container_name: "backend"
     build: ./Back_End
+    restart: on-failure
     ports:
       - "8080:8080"
-    depends_on:
-      - pg
+    # depends_on:
+    #   - pg
   react_fronend:
     container_name: "frontend"
     build: ./Front_End
