--- a/Back_End/package.json
+++ b/Back_End/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.7",
     "pg": "^8.5.1",
     "pgtools": "^0.3.0"
